--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
     <button type="button" class="reset btn btn-primary btn-lg btn-block">
         Reset!
     </button>
+
+    <footer>
+        <div class="container">
+            <a href="https://github.com/napsche/TriviaGame">GitHub Repo | &copy;2020 Nicole Apsche</a>
+        </div>
+    </footer>
    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="assets/javascript/app.js"></script>
