--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <footer>
         <div class="container">
-            <a href="https://github.com/napsche/TriviaGame">GitHub Repo | &copy;2020 Nicole Apsche</a>
+            <a href="https://github.com/napsche/TriviaGame" class="footer" target="blank">GitHub Repo | &copy;2020 Nicole Apsche</a>
         </div>
     </footer>
    
