updating css of buttons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Trivia Game!</h1>
         <div id="timer-display">00:30</div>
     </div>
-    <button type="button" class="start btn btn-primary btn-lg btn-block">Start!</button>
+    <button type="button" class="start btn btn-primary btn-lg btn-block" id="startbtn">Start!</button>
     <div class="question-block">
 
     </div>
@@ -27,10 +27,10 @@
             Unanswered:
         </h2>
     </div>
-    <button type="button" class="done btn btn-primary btn-lg btn-block">
+    <button type="button" class="done btn btn-primary btn-lg btn-block bottombtn">
         Done!
     </button>
-    <button type="button" class="reset btn btn-primary btn-lg btn-block">
+    <button type="button" class="reset btn btn-primary btn-lg btn-block bottombtn">
         Reset!
     </button>
 
